# symtools

./: .gitignore  CLAUDE.md  DATES.md  alerts.md  pyproject.toml  todos.md
.oldgit/: COMMIT_EDITMSG  ORIG_HEAD  config  index
.oldgit/logs/: HEAD
.oldgit/logs/refs/: stash
.oldgit/refs/: stash
app/: main.py
app/mds/: client.py  float.py  hist.py  provider.py  quote.py  refs.py  short_interest.py
app/mds/bloomberg/: __init__.py  hist.py  quote.py  refs.py  session.py
app/mds/polygon/: __init__.py  float.py  hist.py  quote.py  refs.py  short_interest.py
app/models/: alerts.py  analytics.py  baskets.py  blocks.py  cost.py  hist.py  inputs.py  results.py  signals.py
app/server/: cache.py  router.py
app/services/: block_trades.py  cost.py  hist.py  prices.py  quotes.py  refs.py  sector_overrides.py  stream.py  tracking.py
app/services/alerts/: __init__.py
app/services/analytics/: build.py  (+1 more)
app/tools/: converter.py  schema.py
app/utils/: corp.py  dates.py  groups.py  logger.py  market.py  models.py  sic_gics.py  store.py  timing.py  trie.py
docs/: MODELS.md  alerts.md  basic-return-analysis.md  basic-scenario-analysis.md  block-alpha-drivers.md  snapshot-sse.md  stop-loss-analysis.md  strategy-comparison.md  timing-analysis.md
tools/: backfill_hists.py  backtest.py  barra.py  check_discount.py  edgar.py  fix_hists_dates.py  gics.py  lens_report.py  opt.py  portfolio_backtest.py  portfolio_ramp_entry.py  portfolio_rolling.py  portfolio_sizing_sweep.py  portfolio_stop_sweep.py  portfolio_strategy_sweep.py  prices.py  quote.py  survivorship_check.py
(+27 files in other folders)
